# flipt-server-sdks

flipt-rust/: Cargo.toml  buf.gen.yaml
flipt-rust/examples/: evaluations.rs
flipt-rust/src/evaluation/: flipt.evaluation.rs  flipt.evaluation.serde.rs  flipt.evaluation.tonic.rs  mod.rs  models.rs
flipt-rust/src/util/: mod.rs
flipt-rust/tests/: integration.rs
