[package]
name = "flipt"
description = "Flipt Server SDK"
version = "1.0.0"
edition = "2021"
author = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
keywords = ["flipt"]

[features]
flipt_integration = []
default = ["json"]
json = ["dep:serde_json", "dep:reqwest", "dep:serde"]
grpc = ["dep:tonic"]

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_json = { version = "1.0.89", optional = true }
url = "2.5.0"
prost = { version = "0.12.3" }
tonic = { version = "0.11", features = ["gzip"], optional = true }
pbjson = { version = "0.6" }
pbjson-types = { version = "0.6" }

[dev-dependencies]
tokio = { version = "1.22.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }


[[example]]
name = "evaluations"
path = "examples/evaluations.rs"
required-features = ["json"]
